Able to get API and added html for layout

--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,19 @@
   </head>
   <body>
     <div class="container">
-      <p>Welcome to your life.</p>
+      <div class="title"><h2>Benjie's Awesome Music Playlist</h2></div>
+      <div class="audiocontainer">
+        <audio src="">  </audio>
+      </div>
+      <div class="searchcontainer">
+        <div class="searchbar">
+          <input type="button" name="name" placeholder="Search for Artist" value="">
+        </div>
+      </div>
+      <div class="resultscontainer">
+        <div class="artists">
+        </div>
+      </div>
     </div>
     <script src="js/bundle.js"></script>
   </body>
