Added API on to html

--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,9 @@
     <div class="container">
       <div class="title"><h2>Benjie's Awesome Music Playlist</h2></div>
       <div class="audiocontainer">
-        <audio src="">  </audio>
+        <audio controls src="">  </audio>
+        <p class="nowplaying"></p>
+
       </div>
       <div class="searchcontainer">
         <div class="searchbar">
