--- a/app/index.html
+++ b/app/index.html
@@ -12,13 +12,14 @@
       <div class="audiocontainer">
         <audio controls src="">  </audio>
         <p class="nowplaying"></p>
-
+    <form>
       </div>
       <div class="searchcontainer">
         <div class="searchbar">
           <input type="button" name="name" placeholder="Search for Artist" value="">
         </div>
       </div>
+    </form>
       <div class="resultscontainer">
         <div class="artists">
         </div>
