Added search bar with click.

--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
       </div>
       <div class="searchcontainer">
         <div class="searchbar">
-          <input type="button" name="name" placeholder="Search for Artist" value="">
+          <input placeholder="Search for Artist"></input><button>Search</button>
         </div>
       </div>
     </form>
