Taking a break from JS and working on CSS RWD.

--- a/app/index.html
+++ b/app/index.html
@@ -8,16 +8,17 @@
   </head>
   <body>
     <div class="container">
-      <div class="title"><h2>Benjie's Awesome Music Playlist</h2></div>
+      <div class="title">
+        <h2>Benjie's Awesome Music Playlist</h2>
+      </div>
       <div class="audiocontainer">
-    <form>
+        <audio controls src=""></audio>
       </div>
       <div class="searchcontainer">
         <div class="searchbar">
           <input placeholder="Search for Artist"></input><button>Search</button>
         </div>
       </div>
-    </form>
       <div class="resultscontainer">
         <div class="artists">
         </div>
