Working on RWD.

--- a/app/index.html
+++ b/app/index.html
@@ -11,16 +11,16 @@
       <div class="title">
         <h2>Benjie's Awesome Music Playlist</h2>
       </div>
-      <div class="audiocontainer">
-        <audio controls src=""></audio>
-      </div>
-      <div class="searchcontainer">
-        <div class="searchbar">
-          <input placeholder="Search for Artist"></input><button>Search</button>
+      <div class="musiccontainer">
+        <div class="audiocontainer">
+          <audio controls src=""></audio>
         </div>
-      </div>
-      <div class="resultscontainer">
-        <div class="artists">
+        <div class="searchcontainer">
+          <div class="searchbar">
+            <input placeholder="Search for Artist"></input><button>Search</button>
+          </div>
+        </div>
+        <div class="resultscontainer">
         </div>
       </div>
     </div>
