--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Cool Project</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
@@ -9,7 +10,7 @@
   <body>
     <div class="container">
       <div class="title">
-        <h2>Benjie's Awesome Music Playlist</h2>
+        <h2>Benjie's Music Playlist</h2>
       </div>
       <div class="musiccontainer">
         <div class="audiocontainer">
