Commented out JS and going to try new method.

--- a/app/index.html
+++ b/app/index.html
@@ -16,11 +16,13 @@
         <div class="audiocontainer">
           <audio controls src=""></audio>
         </div>
+        <form>
         <div class="searchcontainer">
           <div class="searchbar">
             <input placeholder="Search for Artist"></input><button>Search</button>
           </div>
         </div>
+        </form>
         <div class="resultscontainer">
         </div>
       </div>
