--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
       </div>
       <div class="musiccontainer">
         <div class="audiocontainer">
-          <audio controls src=></audio>
+          <audio controls></audio>
         </div>
         <form>
         <div class="searchcontainer">
