Redoing CSS for project

--- a/app/index.html
+++ b/app/index.html
@@ -3,18 +3,22 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Cool Project</title>
+    <title>Soundcloud Music Player</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
     <div class="container">
       <div class="title">
-        <h2>Benjie's Music Playlist</h2>
+        <h1>
+          <span class="t1">Benjie's</span>
+          <span class="t2">Awesome</span>
+          <span class="t3">SoundCloud</span>
+          <span class="t4">App</span></h1>
       </div>
       <div class="musiccontainer">
         <div class="audiocontainer">
-          <audio controls></audio>
+          <audio autoplay controls></audio>
         </div>
         <form>
         <div class="searchcontainer">
