--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Soundcloud Music Player</title>
+    <title>Benjie's SoundCloud</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
@@ -14,18 +14,19 @@
           <span class="t1">Benjie's</span>
           <span class="t2">Awesome</span>
           <span class="t3">SoundCloud</span>
-          <span class="t4">App</span></h1>
+          <span class="t4">App</span>
+        </h1>
       </div>
       <div class="musiccontainer">
         <div class="audiocontainer">
           <audio autoplay controls></audio>
         </div>
         <form>
-        <div class="searchcontainer">
-          <div class="searchbar">
-            <input placeholder="Search for Artist"></input><button>Search</button>
+          <div class="searchcontainer">
+            <div class="searchbar">
+              <input placeholder="Search for Artist"></input><button>Search</button>
+            </div>
           </div>
-        </div>
         </form>
         <div class="resultscontainer">
         </div>
